# traumabomen

./: .coverage-baseline.json  .env.example  .gitignore  .performance-baseline.ci.json  .performance-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.verify.yml  docker-compose.yml  package.json
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 216ddc743b9e_add_email_verification_fields.py  21b7d9a76c9d_add_feature_flags.py  2609ed51cdbf_add_cascade_delete_to_feature_flag_.py  289ffbef301e_add_trees_persons_relationships_events_.py  2f8000e0372b_add_journal_entries.py  34cd55d04bad_add_faq_entries.py  3f7d5f997c37_add_password_reset_fields.py  4a493b715fd0_add_sibling_groups.py  5c3b53e5e868_add_patterns_table.py  5e3dac0517ba_add_is_read_to_feedback.py  5efe19d38d7a_add_waitlist_entries_table.py  7155daa426c5_create_users_table.py  73326c37101f_add_turning_points.py  7c1a9b2d4e6f_seed_three_more_faq_entries.py  7c3b58c821d0_add_classifications_tables.py  a1b2c3d4e5f6_add_onboarding_safety_acknowledged.py  a3b1c2d4e5f6_add_admin_dashboard_tables.py  a82f764098b0_remove_watercolor_theme_flag.py  b4c2d5e6f7a8_add_login_events_user_id_index.py  b8879465ace5_add_passphrase_hint_to_users.py  c4f70bc3aa25_fix_email_verified_server_default_to_.py  d4e7dad0ae46_add_feedback_table.py  db3cf53ce328_add_tree_is_demo_column.py  e54a6de25b64_add_last_active_at_to_users.py  e9dcfe4e05d2_add_encrypted_key_ring_to_users.py  f91fedfe752f_add_life_events_tables.py  ffd7fc537608_add_refresh_tokens_table.py
api/app/: auth.py  capacity.py  config.py  database.py  dependencies.py  email.py  main.py  rate_limiter.py
api/app/models/: __init__.py  classification.py  event.py  faq.py  feature_flag.py  feedback.py  journal_entry.py  life_event.py  login_event.py  pattern.py  person.py  refresh_token.py  relationship.py  sibling_group.py  tree.py  turning_point.py  user.py  waitlist.py
api/app/routers/: admin.py  admin_feedback.py  admin_stats.py  auth.py  classifications.py  crud_helpers.py  events.py  faq.py  features.py  feedback.py  journal.py  key_ring.py  life_events.py  patterns.py  persons.py  relationships.py  sibling_groups.py  sync.py  testing.py  trees.py  turning_points.py  waitlist.py
api/app/schemas/: admin.py  auth.py  faq.py  sync.py  (+4 more)
api/tests/: conftest.py  test_admin.py  test_auth.py  test_classifications.py  test_database.py  test_email.py  test_features.py  test_feedback.py  test_journal.py  test_key_ring.py  test_life_events.py  test_patterns.py  test_persons.py  test_rate_limiter.py  test_rate_limiter_integration.py  test_relationships.py  test_sentry.py  test_sibling_groups.py  test_sync.py  test_testing.py  test_trees.py  test_turning_points.py  test_waitlist.py
(+750 files in other folders)
