[project]
name = "traumabomen-api"
version = "0.0.1"
description = "Traumabomen API - encrypted document store for family tree data"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "mypy>=1.13.0",
    "ruff>=0.15.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "A"]
ignore = [
    "S105", "S106",  # hardcoded password false positives (JWT config keys)
    "B008",          # Depends() in function defaults is idiomatic FastAPI
    "B905",          # zip() strict= not needed for internal iteration
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S107"]  # assert and hardcoded test passwords are fine in tests
"app/models/**" = ["F821"]  # SQLAlchemy forward refs with __future__ annotations
"app/email.py" = ["E501"]  # HTML email template has long style lines

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # tighten to true over time

[[tool.mypy.overrides]]
module = "app.routers.sync"
ignore_errors = true  # complex union types need refactoring

[[tool.mypy.overrides]]
module = "app.models.*"
ignore_errors = true  # SQLAlchemy forward refs

[tool.coverage.run]
source = ["app"]
concurrency = ["greenlet", "thread"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

